--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,20 +2,57 @@
 
 <html>
 <head>
-	<title>IxD Project</title>	
+	<title>IxD Project</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 	<link rel="stylesheet" href="style/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->        
+    <![endif]-->
 </head>
 
 <body>
-	<div>Hello World!</div>
+	<nav class="top-nav">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">UCSD Plan</a>
+    </div>
+  </nav>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<ul class="tabs">
+						<li class="tab col s3"><a href="#FA17">FA17</a></li>
+						<li class="tab col s3"><a class="active" href="#WI18">WI18</a></li>
+						<li class="tab col s3 disabled"><a href="#SP18">SP18</a></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col s12">
+					<div class="chips chips-autocomplete"></div>
+				</div>
+			</div>
+	  </div>
+	</main>
+	<footer>
+		<div class="row">
+			<div class="col s12">
+				<button class="btn btn-large waves-effect waves-light" type="submit" name="action">Next
+					<i class="material-icons right">send</i>
+				</button>
+			</div>
+		</div>
+	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+	<script src="./script/script.js"></script>
 </body>
 </html>
