--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 	<link rel="stylesheet" href="style/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,23 +19,25 @@
 <body>
 	<nav class="top-nav">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">UCSD Plan</a>
+      <a href="#" class="brand-logo">UCSDPLAN.ME</a>
     </div>
   </nav>
 	<main>
 		<div class="container">
 			<div class="row">
 				<div class="col s12">
-					<ul class="tabs">
+					<ul class="tabs" id="ucsd-quarter">
 						<li class="tab col s3"><a href="#FA17">FA17</a></li>
 						<li class="tab col s3"><a class="active" href="#WI18">WI18</a></li>
 						<li class="tab col s3 disabled"><a href="#SP18">SP18</a></li>
 					</ul>
 				</div>
 			</div>
-
 			<div class="row">
-				<div class="col s12">
+				<div class="col s12" id="class-search">
+					<div id="homepage-logo">
+					<img src="https://upload.wikimedia.org/wikipedia/en/4/44/University_of_California%2C_San_Diego_seal.svg" alt="UC San Diego Logo">
+					</div>
 					<div class="chips chips-autocomplete"></div>
 				</div>
 			</div>
@@ -45,7 +46,10 @@
 	<footer>
 		<div class="row">
 			<div class="col s12">
-				<button class="btn btn-large waves-effect waves-light" type="submit" name="action">Next
+				<button class="btn-floating btn-large waves-effect waves-light" id="homepage-info" type="submit" name="action">
+					<i class="material-icons">info</i>
+				</button>
+				<button class="btn btn-large waves-effect waves-light" id="homepage-next" type="submit" name="action">Next
 					<i class="material-icons right">send</i>
 				</button>
 			</div>
