--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,27 +1,17 @@
-@import 'variables.scss';
-@import '../node_modules/materialize-css/sass/materialize.scss';
+@import 'utils/main';
+@import 'vendors/main';
+@import 'pages/main';
 
 .top-nav {
-  height: 110px;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 
-.brand-logo {
-	margin-top: 25px;
-	font-size: 36px;
-}
-
-.container {
-	margin-top: 25px;
-}
-
 .chips {
-	.input {
-		width: 140px !important;
-	}
+  .input {
+    width: 140px !important;
+  }
 }
-
 
 body {
   display: flex;
@@ -34,31 +24,31 @@ main {
 }
 
 #ucsd-quarter {
-	li {
-		width: 33%;
-	}
+  li {
+    width: 33%;
+  }
 }
 
 #logo-highlight {
-	color: $secondary-color;
+  color: $secondary-color;
 }
 
 #class-search {
-	margin-top: 25px;
+  margin-top: 25px;
 }
 
 #homepage-info {
-	float: left;
+  float: left;
 }
 
 #homepage-next {
-	float: right;
+  float: right;
 }
 
 #homepage-logo {
-	z-index: -1;
-	position: absolute;
-  	top: 66%;
-  	left: 50%;
-  	transform: translate(-50%, -50%);
+  z-index: -1;
+  position: absolute;
+  top: 66%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
