--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,6 +20,9 @@
 	<nav class="top-nav">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">UCSDPLAN.ME</a>
+			<ul class="right">
+        <li><a href="#"><i class="material-icons">info</i></a></li>
+      </ul>
     </div>
   </nav>
 	<main>
@@ -46,9 +49,6 @@
 	<footer>
 		<div class="row">
 			<div class="col s12">
-				<button class="btn-floating btn-large waves-effect waves-light" id="homepage-info" type="submit" name="action">
-					<i class="material-icons">info</i>
-				</button>
 				<button class="btn btn-large waves-effect waves-light" id="homepage-next" type="submit" name="action">Next
 					<i class="material-icons right">send</i>
 				</button>
