Changed color palette.

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
-$primary-color:        #2196f3; /* blue */
+$primary-color:        #03a9f4; /* blue */
 $primary-color-text:   #fff; /* white */
-$secondary-color:      #ff9800; /* orange */
+$secondary-color:      #ffc107; /* orange */
 $primary-text-color:   #212121; /* grey darken-4 */
 $secondary-text-color: #757575; /* grey darken-1 */
 $divider-color:        #bdbdbd; /* grey lighten-1 */
