--- a/views/section.hbs
+++ b/views/section.hbs
@@ -19,36 +19,48 @@
 <body>
 	<nav class="top-nav">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">UCSDPLAN.ME</a>
-			<ul class="right">
-        <li><a href="#"><i class="material-icons">info</i></a></li>
+			<ul class="left">
+        <li><a href="/"><i class="material-icons">keyboard_arrow_left</i></a></li>
       </ul>
+      <span class="brand-logo course-name">{{ code }}: {{ name }}</span>
     </div>
   </nav>
 	<main>
-		<div class="container">
-			<div class="row">
-				<div class="col s12">
-					<ul class="tabs" id="ucsd-quarter">
-						<li class="tab col s3"><a href="#FA17">FA17</a></li>
-						<li class="tab col s3"><a class="active" href="#WI18">WI18</a></li>
-						<li class="tab col s3 disabled"><a href="#SP18">SP18</a></li>
-					</ul>
+		{{#each days}}
+			{{#ifHasDay short @root.timeslots}}
+				<div class="container">
+					<h5>{{ ../name }}</h5>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col s12" id="class-search">
-					<div id="homepage-logo">
-					<img src="https://upload.wikimedia.org/wikipedia/en/4/44/University_of_California%2C_San_Diego_seal.svg" alt="UC San Diego Logo">
-					</div>
-					<div class="chips chips-autocomplete"></div>
-				</div>
-			</div>
-	  </div>
+				<div class="event-row">
+				{{#each @root.timeslots}}
+					{{#ifContains days ../../short}}
+				        <div class="event card-panel teal">
+									<div class="card-content white-text">
+			              <p class="event-details event-time">{{ ../time }}</p>
+			              <h5 class="event-title">Lecture</h5>
+										<p class="event-details event-location">{{ ../building }} {{ ../room }}</p>
+										<p class="event-details">{{ ../instructor }}</p>
+										<div class="switch">
+											<label class="event-toggle">
+												<input type="checkbox">
+												<span class="lever"></span>
+											</label>
+										</div>
+			            </div>
+				        </div>
+
+					{{/ifContains}}
+				{{/each}}
+	    </div>
+			{{/ifHasDay}}
+		{{/each}}
 	</main>
 	<footer>
 		<button class="btn btn-large waves-effect waves-light" id="homepage-next" type="submit" name="action">Next
 			<i class="material-icons right">send</i>
+		</button>
+		<button class="btn btn-large waves-effect waves-light" id="homepage-next" type="submit" name="action">Add Event
+			<i class="material-icons right">event</i>
 		</button>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
