--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,9 +19,9 @@
 <body>
 	<nav class="top-nav">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">UCSDPLAN.ME</a>
+      <span class="brand-logo">UCSDPLAN.ME</span>
 			<ul class="right">
-        <li><a href="#"><i class="material-icons">info</i></a></li>
+        <li><a href="/skeleton/help.html"><i class="material-icons">info</i></a></li>
       </ul>
     </div>
   </nav>
