--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
     <![endif]-->
 </head>
 
-<body class="grayscale">
+<body>
 	<nav class="top-nav">
     <div class="nav-wrapper">
       <span class="brand-logo">UCSDPLAN.ME</span>
