--- a/views/section.hbs
+++ b/views/section.hbs
@@ -16,7 +16,7 @@
     <![endif]-->
 </head>
 
-<body class="grayscale">
+<body>
 	<nav class="top-nav">
     <div class="nav-wrapper">
 			<ul class="left">
