--- a/views/events.hbs
+++ b/views/events.hbs
@@ -45,19 +45,19 @@
 				<p>Repeats on:</p>
 				<div class="weekDays-selector">
 					<input type="checkbox" id="weekday-sun" class="weekday" />
-				  <label for="weekday-sun">Su</label>
+				  <label for="weekday-sun">SU</label>
 				  <input type="checkbox" id="weekday-mon" class="weekday" />
 				  <label for="weekday-mon">M</label>
 				  <input type="checkbox" id="weekday-tue" class="weekday" />
-				  <label for="weekday-tue">Tu</label>
+				  <label for="weekday-tue">TU</label>
 				  <input type="checkbox" id="weekday-wed" class="weekday" />
 				  <label for="weekday-wed">W</label>
 				  <input type="checkbox" id="weekday-thu" class="weekday" />
-				  <label for="weekday-thu">Th</label>
+				  <label for="weekday-thu">TH</label>
 				  <input type="checkbox" id="weekday-fri" class="weekday" />
 				  <label for="weekday-fri">F</label>
 				  <input type="checkbox" id="weekday-sat" class="weekday" />
-				  <label for="weekday-sat">Sa</label>
+				  <label for="weekday-sat">SA</label>
 				</div>
 				<div class="input-field col s6">
 					<i class="material-icons prefix">access_time</i>
