add manage courses, edit and save functionality

--- a/views/partials/sidenav.handlebars
+++ b/views/partials/sidenav.handlebars
@@ -6,6 +6,7 @@
     <a><span class="white-text email">{{ user.emails.0.value }}</span></a>
   </div></li>
   <li><a class="waves-effect" href="/"><i class="material-icons">school</i>Add Courses</a></li>
+  <li><a class="waves-effect" href="/manage"><i class="material-icons">edit</i>Manage Courses</a></li>
   <li><a class="waves-effect" href="/calendar"><i class="material-icons">event</i>Calendar</a></li>
   <li><div class="divider"></div></li>
   <li><a class="waves-effect" href="/about"><i class="material-icons">info</i>About</a></li>
