--- a/views/manage.hbs
+++ b/views/manage.hbs
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="/style/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,50 +17,39 @@
 </head>
 
 <body>
-	<form method="post" action="/wizard">
+	<form method="post">
 		<nav class="top-nav">
 	    <div class="nav-wrapper">
-	      <span class="brand-logo">UCSDPLAN.ME</span>
+	      <span class="brand-logo">MANAGE YO COURSES</span>
 				<ul class="nav-ul left">
+					{{#if editing}} 
+					<li><a href="/manage"><i class="material-icons">chevron_left</i></a></li>
+					{{else}}
 					<li><a href="#" data-activates="slide-out" class="button-collapse waves-effect"><i class="material-icons">menu</i></a></li>
+					{{/if}}
 	      </ul>
 	    </div>
 	  </nav>
 		{{> sidenav this }}
-		<main>
-			<div class="container">
-				<div class="row">
-					<div class="col s12">
-						<ul class="tabs" id="ucsd-quarter">
-							<li class="tab col s3 disabled"><a href="#FA17">FA17</a></li>
-							<li class="tab col s3"><a class="active" href="#WI18">WI18</a></li>
-							<li class="tab col s3 disabled"><a href="#SP18">SP18</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s12" id="class-search">
-						<div id="homepage-logo">
-						<img src="https://upload.wikimedia.org/wikipedia/en/4/44/University_of_California%2C_San_Diego_seal.svg" alt="UC San Diego Logo">
-						</div>
-						<div class="chips chips-autocomplete disabled"></div>
-					</div>
-				</div>
-		  </div>
-		</main>
+	<main>
+		{{#if editing}} 
+		{{> course this}}
+		{{else}}
+        {{> courselist this }}
+        {{/if}}
+	</main>
 		<footer>
-			<button class="btn btn-large waves-effect waves-light" id="homepage-next" type="submit" name="action">Next
+			<button class="btn btn-large waves-effect waves-light" id="section-next" type="submit" name="action" value="next">Save
 				<i class="material-icons right">send</i>
+			</button>
+			
+			<button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action" disabled>Add Event
+				<i class="material-icons right">event</i>
 			</button>
 		</footer>
 	</form>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	<script src="./script/script.js"></script>
-	<script>
-		$(document).ready(() => {
-			loadCourses();
-		});
-	</script>
+	<script src="/script/script.js"></script>
 </body>
 </html>
