--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
 	<form method="post" action="/wizard">
 		<nav class="top-nav">
 	    <div class="nav-wrapper">
-	      <span class="brand-logo">UCSDPLAN.ME</span>
+	      <span class="brand-logo">Add Courses</span>
 				<ul class="nav-ul left">
 					<li><a href="#" data-activates="slide-out" class="button-collapse waves-effect"><i class="material-icons">menu</i></a></li>
 	      </ul>
