add toasts, apply small tweaks

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -32,11 +32,6 @@
 	</center>
 </div>
 </main>
-
+{{> script }}
 </body>
-
-
-<!--<h1>Login with Google</h1>
-<a href="/auth/google">Login with google</a>-->
-
 </html>
