--- a/views/index.hbs
+++ b/views/index.hbs
@@ -54,9 +54,7 @@
 			</button>
 		</footer>
 	</form>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	<script src="./script/script.js"></script>
+	{{> script }}
 	<script>
 		$(document).ready(() => {
 			loadCourses();
