--- a/views/section.hbs
+++ b/views/section.hbs
@@ -36,8 +36,6 @@
 			<i class="material-icons right">event</i>
 		</button>
 	</footer>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	<script src="/script/script.js"></script>
+	{{> script }}
 </body>
 </html>
