Added selection filter for selecting class timeslots.

--- a/views/wizard.hbs
+++ b/views/wizard.hbs
@@ -32,7 +32,7 @@
 		</main>
 		<footer>
 			{{#if user.wizard.final}}
-			<button class="btn btn-large waves-effect waves-light" id="section-next" type="submit" name="action" value="next">Finalize
+			<button class="btn btn-large waves-effect waves-light" id="section-next" type="submit" name="action" value="next">Save
 				<i class="material-icons right">send</i>
 			</button>
 			{{else}}
