--- a/views/partials/course.handlebars
+++ b/views/partials/course.handlebars
@@ -1,6 +1,6 @@
 {{#if course.sections}}
   <div class="container">
-    <center><h5>Select Your Section</h5></center>
+    <center><h5>Filter by Section</h5></center>
     <div class="section-select">
       {{#each course.sections}}
         <label for="section-{{ this }}"><input type="checkbox" class="filled-in" id="section-{{ this }}" name="section" value="{{ this }}" {{isChecked this ../courseData }}/><span>{{ this }}</span></label>
@@ -9,7 +9,10 @@
   </div>
 {{/if}}
 <div class="container">
-  <center><h5>Customize Schedule</h5></center>
+  <center>
+    <h5>Customize Schedule</h5>
+    <h6>Select the timeslots that you wish to include in your calendar</h6>
+  </center>
 </div>
 {{#each course.events_repeating}}
   {{#if this}}
@@ -26,7 +29,7 @@
             <p class="event-details">{{#each instructors}}{{ this }} {{/each}}</p>
             <div class="switch">
               <label class="event-toggle">
-                <input type="checkbox" name="timeslot" value="{{ @key }}" {{isChecked @key ../../courseData }}>
+                <input type="checkbox" name="timeslot" class="section-{{ section }}" value="{{ @key }}" {{isChecked @key ../../courseData }}>
                 <span class="lever"></span>
               </label>
             </div>
@@ -36,3 +39,45 @@
     </div>
   {{/if}}
 {{/each}}
+
+<script>
+  document.onreadystatechange = () => {
+    if (document.readyState === 'complete') {
+      function updateFilter() {
+        let sectionLetters = [];
+        $('input[type="checkbox"][name="section"]:checked').each(function() {
+          sectionLetters.push($(this).val());
+        });
+        $('.event').each(function() {
+          const section = $(this).find('.event-section').text().charAt(0);
+          if (sectionLetters.length == 0 || sectionLetters.includes(section)) {
+            $(this).show();
+          } else {
+            $(this).hide();
+          } if ($(this).find('input[type="checkbox"][name="timeslot"]:checked').length > 0) {
+            $(this).show();
+          }
+        });
+      };
+
+      $('input[type="checkbox"][name="section"]').change(()=>{
+        updateFilter();
+      });
+
+      $('.event').click(function(e) {
+        const checkbox = $(this).find('input[type="checkbox"][name="timeslot"]').first();
+        checkbox.prop('checked', !checkbox.prop("checked"));
+      });
+
+      /*{{#if course.sections}}
+        {{#each course.sections}}
+          $("#section-{{ this }}").click(() => {
+            $('.event').each(()=>{
+              $(this).find('input[type="checkbox"]').toggle();
+            });
+          });
+        {{/each}}
+      {{/if}}*/
+    }
+  };
+</script>
