--- a/views/partials/course.handlebars
+++ b/views/partials/course.handlebars
@@ -60,6 +60,7 @@
         });
       };
 
+      updateFilter();
       $('input[type="checkbox"][name="section"]').change(()=>{
         updateFilter();
       });
