Set up handlebars for about and help pages.

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -19,13 +19,16 @@
 <body>
 		<nav class="top-nav">
 	    <div class="nav-wrapper">
-	      <span class="brand-logo">About</span>
+	      <span class="brand-logo">About Us</span>
 				<ul class="nav-ul left">
 					<li><a href="/"><i class="material-icons">chevron_left</i></a></li>
 	      </ul>
 	    </div>
 	  </nav>
 		<main>
+      <div class="container">
+				<h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a turpis et ipsum venenatis suscipit vel sit amet nulla. Etiam ipsum est, ultrices sit amet arcu id, luctus mattis enim. Maecenas molestie quam at leo vestibulum lacinia. Duis vel justo sit amet enim lacinia placerat. Pellentesque a bibendum lectus. Nunc eu massa risus. Etiam accumsan nunc id imperdiet tincidunt. Proin non enim fringilla, porttitor elit sit amet, interdum tortor. Sed et tempor felis. Pellentesque malesuada eros ligula, quis maximus elit posuere vel. Morbi vitae risus nec risus sagittis viverra. Aliquam erat volutpat. Nulla cursus sodales viverra. Morbi non quam ac elit volutpat finibus ac sed erat.</h6>
+			</div>
 		</main>
 		<footer>
 		</footer>
