modufy about heading

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -19,7 +19,7 @@
 <body>
 		<nav class="top-nav">
 	    <div class="nav-wrapper">
-	      <span class="brand-logo">About Us</span>
+	      <span class="brand-logo">About</span>
 				<ul class="nav-ul left">
 					<li><a href="/"><i class="material-icons">chevron_left</i></a></li>
 	      </ul>
