--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -18,11 +18,20 @@
 	</div>
 	{{> sidenav this }}
 	<main class="main-small">
+    <div class="row">
+      <div class="col s12">
+        <ul class="tabs" id="ucsd-quarter">
+          <li class="tab col s3 disabled"><a href="#FA17">FA17</a></li>
+          <li class="tab col s3"><a class="active" href="#WI18">WI18</a></li>
+          <li class="tab col s3 disabled"><a href="#SP18">SP18</a></li>
+        </ul>
+      </div>
+    </div>
 		{{> courses this }}
 	</main>
 	<footer class="footer-vertical">
-		<button class="waves-effect waves-light btn btn-large btn-wide"><span class="btn-text-centered">Export to Google Calendar</span><i class="material-icons right">event</i></button>
-		<button class="waves-effect waves-light btn btn-large btn-wide"><span class="btn-text-centered">Download ICAL File</span><i class="material-icons right">file_download</i></button>
+		<a href="https://calendar.google.com/calendar/r?cid=https://edge-lords-a6.herokuapp.com/dummy.ics" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Export to Google Calendar</span><i class="material-icons right">event</i></a>
+		<a href="/dummy.ics" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Download ICAL File</span><i class="material-icons right">file_download</i></a>
 	</footer>
 	{{> script }}
 </body>
