minor text fixes

--- a/views/manage.hbs
+++ b/views/manage.hbs
@@ -41,7 +41,7 @@
 				<div class="container">
 					<center>
 						<br />
-						<h6>Add a course to get started</h6>
+						<h6>Add some courses to get started</h6>
 					</center>
 				</div>
 			{{/if}}
