--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -27,7 +27,16 @@
         </ul>
       </div>
     </div>
-		{{> courses this }}
+    {{#if hasCourses}}
+      {{> courses this }}
+    {{else}}
+      <div class="container">
+        <center>
+          <br />
+          <h6>Add some courses to get started</h6>
+        </center>
+      </div>
+    {{/if}}
 	</main>
 	<footer class="footer-vertical">
 		<a href="https://calendar.google.com/calendar/r?cid=https://edge-lords-a6.herokuapp.com/dummy.ics" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Export to Google Calendar</span><i class="material-icons right">event</i></a>
