--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -39,7 +39,7 @@
     {{/if}}
 	</main>
 	<footer class="footer-vertical">
-		<a href="https://calendar.google.com/calendar/r?cid=https://edge-lords-a6.herokuapp.com/dummy.ics" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Export to Google Calendar</span><i class="material-icons right">event</i></a>
+		<a href="https://calendar.google.com/calendar/r?cid=http://edge-lords-a6.herokuapp.com/dummy.ics" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Export to Google Calendar</span><i class="material-icons right">event</i></a>
 		<a href="/dummy.ics" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Download ICAL File</span><i class="material-icons right">file_download</i></a>
 	</footer>
 	{{> script }}
