--- a/views/manage.hbs
+++ b/views/manage.hbs
@@ -53,7 +53,7 @@
 					<i class="material-icons right">send</i>
 				</button>
 
-				<button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action" disabled>Add Event
+				<button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action" style="display: none;" disabled>Add Event
 					<i class="material-icons right">event</i>
 				</button>
 			{{else}}
