--- a/views/wizard.hbs
+++ b/views/wizard.hbs
@@ -31,7 +31,7 @@
 				<i class="material-icons right">send</i>
 			</button>
 			{{/if}}
-			<button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action" disabled>Add Event
+			<button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action" style="display: none;" disabled>Add Event
 				<i class="material-icons right">event</i>
 			</button>
 		</footer>
