--- a/views/partials/course.handlebars
+++ b/views/partials/course.handlebars
@@ -1,13 +1,24 @@
 {{#if course.sections}}
-  <div class="container">
-    <center><h5>Filter by Section</h5></center>
-    <div class="section-select">
-      {{#each course.sections}}
-        <label for="section-{{ this }}"><input type="checkbox" class="filled-in" id="section-{{ this }}" name="section" value="{{ this }}" {{isChecked this ../courseData }}/><span>{{ this }}</span></label>
-      {{/each}}
+  {{#if course.hideSections}}
+  {{else}}
+    <div class="container">
+      <center><h5>Filter by Section</h5></center>
+      <div class="section-select">
+        {{#each course.sections}}
+          <label for="section-{{ this }}"><input type="checkbox" class="filled-in" id="section-{{ this }}" name="section" value="{{ this }}" {{isChecked this ../courseData }}/><span>{{ this }}</span></label>
+        {{/each}}
+      </div>
     </div>
-  </div>
+  {{/if}}
 {{/if}}
+{{#if course.hideTimeslots}}
+<div class="container">
+  <center>
+    <br />
+    <h6>This course has no weekly events on the public schedule of classes</h6>
+  </center>
+</div>
+{{else}}
 <div class="container">
   <center>
     <h5>Customize Schedule</h5>
@@ -39,7 +50,7 @@
     </div>
   {{/if}}
 {{/each}}
-
+{{/if}}
 <script>
   document.onreadystatechange = () => {
     if (document.readyState === 'complete') {
