--- a/views/help.hbs
+++ b/views/help.hbs
@@ -21,7 +21,7 @@
 	    <div class="nav-wrapper">
 	      <span class="brand-logo">Help</span>
 				<ul class="nav-ul left">
-					<li><a href="/"><i class="material-icons">chevron_left</i></a></li>
+					<li><a class="back" href="/"><i class="material-icons">chevron_left</i></a></li>
 	      </ul>
 	    </div>
 	  </nav>
