--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -15,3 +15,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@media (orientation:landscape) {
+  #homepage-logo {
+    display: none;
+  }
+}
