--- a/views/partials/courselist.handlebars
+++ b/views/partials/courselist.handlebars
@@ -8,7 +8,11 @@
             </div>
             <div class="card-action">
               <a href="/manage/edit/{{@key}}">Edit</a>
-              <a class="confirm" data-confirmMessage="Are you sure you want to remove {{@key}} from your calendar?" href="/manage/drop/{{@key}}">Drop</a>
+              <a class="confirm-link"
+              data-confirmMessage="Are you sure you want to remove {{@key}} from your calendar?"
+              data-confirmYes="Drop"
+              data-confirmNo="Keep"
+              href="/manage/drop/{{@key}}">Drop</a>
             </div>
           </div>
         </div>
